integration-tests/tests/snapshots/postgres__the_saved_config_spells_out_every_table_and_function_that_was_discovered.snap
---
source: integration-tests/tests/postgres.rs
expression: saved
---
listen_addresses: 127.0.0.1:0
postgres:
  connection_string: [DATABASE_URL]
  default_srid: 900913
  auto_bounds: calc
  pool_size: 1
  auto_publish: true
  tables:
    .-Points-----------quote:
      schema: "\"Quotes' \\ \\' \\\" and Space.Dot."
      table: . Points" \ \' \" 'quote
      srid: 4326
      geometry_column: . ' \ \' \" "Geom"
      bounds:
      - -170.9498463900
      - -84.2002558073
      - 167.7089285828
      - 74.2357328475
      geometry_type: POINT
      properties:
        "' id '": int4
        ".namE ": text
    MixPoints:
      schema: MixedCase
      table: MixPoints
      srid: 4326
      geometry_column: Geom
      bounds:
      - -170.9498463900
      - -84.2002558073
      - 167.7089285828
      - 74.2357328475
      geometry_type: POINT
      properties:
        Gid: int4
        TABLE: text
    antimeridian:
      schema: public
      table: antimeridian
      srid: 4326
      geometry_column: geom
      bounds:
      - -182.0
      - 51.0
      - -160.0
      - 62.0
      geometry_type: GEOMETRY
      properties:
        gid: int4
    auto_table:
      schema: autodetect
      table: auto_table
      srid: 4326
      geometry_column: geom
      bounds:
      - -166.8710712623
      - -53.4474724911
      - 168.1406122036
      - 84.2241186147
      geometry_type: POINT
      properties:
        feat_id: int4
        gid: int4
    bigint_table:
      schema: autodetect
      table: bigint_table
      srid: 4326
      geometry_column: geom
      bounds:
      - -174.8947556456
      - -77.2579745396
      - 174.7275322451
      - 73.8078595059
      geometry_type: POINT
      properties:
        big_feat_id: int8
        id: int4
    empty_bounds:
      schema: public
      table: empty_bounds
      srid: 4326
      geometry_column: geom
      geometry_type: GEOMETRY
      properties:
        gid: int4
    linestring_bounds:
      schema: public
      table: linestring_bounds
      srid: 4326
      geometry_column: geom
      bounds:
      - 8.9581704
      - 9.0370178
      - 10.9675324
      - 11.0370178
      geometry_type: GEOMETRY
      properties:
        gid: int4
    linestring_bounds_vertical:
      schema: public
      table: linestring_bounds_vertical
      srid: 4326
      geometry_column: geom
      bounds:
      - 9.0
      - 8.9581704
      - 11.0
      - 10.9675324
      geometry_type: GEOMETRY
      properties:
        gid: int4
    mat_view:
      schema: public
      table: mat_view
      srid: 900913
      geometry_column: geom
      bounds:
      - -0.0010997121
      - 0.0003416246
      - -0.0006641715
      - 0.0003683552
      geometry_type: GEOMETRY
      properties:
        id: int4
    point_bounds:
      schema: public
      table: point_bounds
      srid: 4326
      geometry_column: geom
      bounds:
      - 9.0
      - 19.0
      - 11.0
      - 21.0
      geometry_type: GEOMETRY
      properties:
        gid: int4
    points1:
      schema: public
      table: points1
      srid: 4326
      geometry_column: geom
      bounds:
      - -179.2731397013
      - -67.5251856326
      - 162.6011719373
      - 84.9309209512
      geometry_type: POINT
      properties:
        gid: int4
    points1_vw:
      schema: public
      table: points1_vw
      srid: 4326
      geometry_column: geom
      bounds:
      - -179.2731397013
      - -67.5251856326
      - 162.6011719373
      - 84.9309209512
      geometry_type: POINT
      properties:
        gid: int4
    points2:
      schema: public
      table: points2
      srid: 4326
      geometry_column: geom
      bounds:
      - -174.0507507353
      - -80.4617715784
      - 179.1118718108
      - 81.1306876416
      geometry_type: POINT
      properties:
        gid: int4
    points3857:
      schema: public
      table: points3857
      srid: 3857
      geometry_column: geom
      bounds:
      - -161.4059077755
      - -81.5072702160
      - 172.5154912676
      - 84.2440187164
      geometry_type: POINT
      properties:
        gid: int4
    points_empty:
      schema: public
      table: points_empty
      srid: 900913
      geometry_column: geom
      geometry_type: GEOMETRY
      properties:
        gid: int4
    points_empty_srid:
      schema: public
      table: points_empty_srid
      srid: 900913
      geometry_column: geom
      bounds:
      - -162.3519667978
      - -84.4991977003
      - 178.4729467744
      - 82.7000012450
      geometry_type: GEOMETRY
      properties:
        gid: int4
    table_and_view_two_schemas:
      schema: schema_a
      table: table_and_view_two_schemas
      srid: 900913
      geometry_column: a_geom
      bounds:
      - 0.0012741832
      - 0.0000988181
      - 0.0012921495
      - 0.0001169055
      geometry_type: GEOMETRY
      properties:
        a_id: int4
        a_info: text
    table_and_view_two_schemas.1:
      schema: schema_b
      table: table_and_view_two_schemas
      srid: 900913
      geometry_column: b_geom
      bounds:
      - 0.0012741832
      - 0.0000988181
      - 0.0012921495
      - 0.0001169055
      geometry_type: GEOMETRY
      properties:
        b_id: int4
        b_info: text
    table_name_existing_two_schemas:
      schema: schema_a
      table: table_name_existing_two_schemas
      srid: 4326
      geometry_column: a_geom
      bounds:
      - 142.8409440943
      - 11.9267418460
      - 142.8414336000
      - 11.9273703485
      geometry_type: POINT
      properties:
        a_id: int4
        a_name: text
    table_name_existing_two_schemas.1:
      schema: schema_b
      table: table_name_existing_two_schemas
      srid: 4326
      geometry_column: b_geom
      bounds:
      - 10.0
      - 10.0
      - 40.0
      - 40.0
      geometry_type: POLYGON
      properties:
        b_id: int4
        b_info: text
    table_source:
      schema: public
      table: table_source
      srid: 4326
      geometry_column: geom
      bounds:
      - -2.0
      - -1.0
      - 142.8413150986
      - 45.0
      geometry_type: GEOMETRY
      properties:
        gid: int4
    table_source_geog:
      schema: public
      table: table_source_geog
      srid: 4326
      geometry_column: geog
      bounds:
      - -2.0
      - 0.0
      - 142.8413150986
      - 45.0
      geometry_type: Geometry
      properties:
        gid: int4
    table_source_multiple_geom:
      schema: public
      table: table_source_multiple_geom
      srid: 4326
      geometry_column: geom1
      bounds:
      - -136.6207604970
      - -78.3350299285
      - 176.5629774349
      - 75.7873106595
      geometry_type: POINT
      properties:
        gid: int4
    table_source_multiple_geom.1:
      schema: public
      table: table_source_multiple_geom
      srid: 4326
      geometry_column: geom2
      bounds:
      - -136.6207604970
      - -78.3350299285
      - 176.5629774349
      - 75.7873106595
      geometry_type: POINT
      properties:
        gid: int4
    view_name_existing_two_schemas:
      schema: schema_a
      table: view_name_existing_two_schemas
      srid: 4326
      geometry_column: a_geom
      bounds:
      - 142.8409440943
      - 11.9267418460
      - 142.8414336000
      - 11.9273703485
      geometry_type: POINT
      properties:
        a_id: int4
        a_name: text
    view_name_existing_two_schemas.1:
      schema: schema_b
      table: view_name_existing_two_schemas
      srid: 4326
      geometry_column: b_geom
      bounds:
      - 10.0
      - 10.0
      - 40.0
      - 40.0
      geometry_type: POLYGON
      properties:
        b_id: int4
        b_info: text
  functions:
    -function.withweired---_-characters:
      schema: public
      function: "\"function.withweired$*;_ characters"
    function_Mixed_Name:
      schema: MixedCase
      function: function_Mixed_Name
    function_null:
      schema: public
      function: function_null
    function_null_row:
      schema: public
      function: function_null_row
    function_null_row2:
      schema: public
      function: function_null_row2
    function_zoom_xy:
      schema: public
      function: function_zoom_xy
    function_zxy:
      schema: public
      function: function_zxy
    function_zxy2:
      schema: public
      function: function_zxy2
    function_zxy_query:
      schema: public
      function: function_zxy_query
    function_zxy_query_jsonb:
      schema: public
      function: function_zxy_query_jsonb
    function_zxy_query_test:
      schema: public
      function: function_zxy_query_test
    function_zxy_raster:
      schema: public
      function: function_zxy_raster
    function_zxy_row:
      schema: public
      function: function_zxy_row
    function_zxy_row_key:
      schema: public
      function: function_zxy_row_key
